[gd_scene load_steps=7 format=3 uid="uid://bjqsh4k20y0jw"]

[ext_resource type="Script" path="res://UI/Challenges.gd" id="1_tiknw"]
[ext_resource type="PackedScene" uid="uid://cchhsv5fjvfiu" path="res://UI/TextBox.tscn" id="2_cl5um"]

[sub_resource type="Animation" id="Animation_kxraa"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Challenge1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8saba"]
resource_name = "FadeInChallenge2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Challenge2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3rulo"]
resource_name = "FadeInChallenge3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Challenge3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwdrc"]
_data = {
"FadeInChallenge1": SubResource("Animation_kxraa"),
"FadeInChallenge2": SubResource("Animation_8saba"),
"FadeInChallenge3": SubResource("Animation_3rulo")
}

[node name="Challenges" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tiknw")

[node name="Challenge1" parent="." instance=ExtResource("2_cl5um")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 44.0
offset_top = 38.0
offset_right = 399.0
offset_bottom = 161.0
scale = Vector2(0.8, 0.8)
text = "You feel faint..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Challenge2" parent="." instance=ExtResource("2_cl5um")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 828.0
offset_top = 36.0
offset_right = 1183.0
offset_bottom = 159.0
scale = Vector2(0.8, 0.8)
text = "You become left handed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Challenge3" parent="." instance=ExtResource("2_cl5um")]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 46.0
offset_top = 36.0
offset_right = 401.0
offset_bottom = 159.0
scale = Vector2(0.8, 0.8)
text = "The earth rumbles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwdrc")
}
